resolved some overlap

--- a/src/renderer/src/components/ordersPage/orderReview/Components/activeOrder/activeOrder.css
+++ b/src/renderer/src/components/ordersPage/orderReview/Components/activeOrder/activeOrder.css
@@ -13,7 +13,7 @@
     width: 40%;
     height: 100%;
 }
-.info-container {
+.info-container-order {
     width: 40%;
     height: 100%;
     display: flex;
